--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,31 @@
 <div class="container">
-  <form autocomplete="off">
+  <form [formGroup]="checkoutUserForm.form">
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="inputEmail4">Email</label>
-        <input type="email" class="form-control" id="inputEmail4">
+        <input
+          type="email"
+          class="form-control"
+          id="inputEmail4"
+          formControlName="email">
+        <div *ngIf="checkoutUserForm.emailControl.emailError">
+          {{ checkoutUserForm.emailControl.emailError }}
+        </div>
       </div>
       <div class="form-group col-md-6">
         <label for="inputPassword4">Password</label>
-        <input type="password" class="form-control" id="inputPassword4">
+        <input
+          type="password"
+          class="form-control"
+          id="inputPassword4">
       </div>
     </div>
     <div class="form-group">
-      <label for="inputAddress">Address</label>
-      <input type="text" class="form-control" id="inputAddress">
+      <label for="inputDNI">DNI</label>
+      <input
+        type="text"
+        class="form-control"
+        id="inputDNI">
     </div>
     <div class="form-row">
       <div class="form-group col-md-6">
